# reverse-ad-demo

./: .clang-format  .clang-tidy  .codespellrc  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  flake.nix
.github/workflows/: ci.yml
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/reverse-ad-demo/: dual.hpp  expr.hpp  reverse-ad-demo.hpp
test/: CMakeLists.txt
test/source/: correctness.hpp  nnls.hpp  reverse-ad-demo_test.cpp
